@@ -4,6 +4,9 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
  [Added / develop requires]
  - Dist::Zilla::Plugin::Pod2Readme
 
+ [Changed / configure requires]
+ - perl 5.008 → 5.006
+
  [Changed / develop recommends]
  - Test::More 1.001009 → 1.001014
 
@@ -13,8 +16,17 @@ This file contains ALL changes in dependencies in both REQUIRED / OPTIONAL depen
  [Changed / develop suggests]
  - Dist::Zilla::PluginBundle::Author::KENTNL 2.022001 → 2.022003
 
+ [Changed / runtime requires]
+ - perl 5.008 → 5.006
+
  [Changed / test recommends]
  - Test::More 1.001009 → 1.001014
+
+ [Changed / test requires]
+ - perl 5.008 → 5.006
+
+ [Removed / runtime requires]
+ - utf8
 
 1.004000 2014-12-14T08:34:41Z
  [Added / configure requires]
