@@ -6,8 +6,10 @@
 
  [Dependencies::Stats]
  - Dependencies changed since 1.004000, see misc/*.deps* for details
+ - configure: ↓1
  - develop: +1 ↑1 (recommends: ↑1, suggests: ↑1)
- - test: (recommends: ↑1)
+ - runtime: ↓1 -1
+ - test: ↓1 (recommends: ↑1)
 
  [Internals]
  - Slightly better code refactory in main loop.
